<resources>
    <string name="app_name">EngageIt 1.0</string>
    <string name="acceptbtn">Accept</string>
    <string name="refusebtn">Refuse</string>
    <string name="agreement">The information and data collected  in this study will be stored safely and handled confidentially.
        Your data will be anonymized through the assignment of an alphanumerical code and your name will never be mentioned
        in connection to the data or in any report. Any attempt to deduce your identity from the data is explicitly
        forbidden by our data analysis policy.Your participation in the study is completely voluntary. \nYou have the right to withdraw from the study at any time without penalty and to
        require your data to be entirely and permanently deleted.\n\n
    By pressing \"Accept\" you confirm that you carefully read and understood the information reported above and that you agree to participate in the research study.</string>
    <string name="refuse_text">You can be sure that your data won\'t be used for illegal activities. Please help us by providing your data, otherwise your account will be deleted.</string>
    <string name="refuse_ok">Okay, I will!</string>
    <string name="terms_title">Informed consent</string>
    <string name="refuse_title">Please change your mind...</string>
    <string name="refuse_nok">No, I can\'t...</string>
    <string name="add_profile">Add Your Profile</string>
    <string name="age_title">Age</string>
    <string name="gender_title">Gender</string>
    <string name="faculty_title">Faculty</string>
    <string name="studies_level">Level of studies</string>
    <string name="course_title">Attended courses</string>
    <string name="questionnaireTitle">Thank you for completing the questionnaire!</string>
    <string name="goHome">Go back to Home page</string>
    <string name="helpTitle">Help</string>


    <string name="reg_done_btn">Done</string>
    <string name="settings_title">Settings</string>
    <string name="registration">Registration details</string>
    <string name="terms_and_conditions">Informed consent details</string>
    <string name="exit_title">Exit</string>
    <string name="exit_text">Do you want to exit?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="welcome_title">Welcome to</string>
    <string name="your_data_btn">Your Data</string>
    <string name="inclass_btn">In Class \nQuestions</string>
    <string name="surveys_btn">Surveys</string>
    <string name="generalSurvey">General Survey</string>
    <string name="pamSurvey">PAM</string>
    <string name="post_lecture">Post-lecture Survey</string>
    <string name="your_data_title">Your Data</string>
    <string name="wearable_data_btn">Wearable Data</string>
    <string name="survey_data_btn">Survey Data</string>
    <string name="login_title">Login</string>
    <string name="course_hint">Course</string>
    <string name="sign_in_button">Next</string>

    <string name="login_hint">* Please, log in. You can do it by adding/choosing profile at the top right corner of the screen. </string>
    <string name="attend_text">Will you attend the next lecture?</string>
    <string name="attend_yes">I will!</string>
    <string name="attend_no">Sorry, I won\'t...</string>
    <string name="attend_title">Attendance</string>
    <string name="editRegistrationBtn">Edit Registration</string>
    <string name="editProfileTitle">Edit Your Profile</string>
    <string name="editProfileHint">Hint: Click on your course to edit your registration.</string>
    <string name="registrationEdit_title">Edit Registration</string>
    <string name="username_label">Username: /</string>
    <string name="add_your_profile_btn">Add Your Profile</string>
    <string name="edit_your_profile_btn">Edit Your Profile</string>
    <string name="choose_other_profiles_btn">Choose Other Profiles</string>
    <string name="username">Username</string>
    <string name="courseDialogBtn">Choose courses</string>
    <string name="choose_profiles_title">Choose Profile</string>
    <string name="choose_profile_hint">* Click on the username in order to activate specific profile.</string>

    <string name="dialog_password_title">Enter Admin password to proceed</string>
    <string name="password_hint">Password</string>
    <string name="logout">Logout</string>

    <string-array name="courses">
        <item>Linear Algebra</item>
        <item>Programming Fundamentals</item>
        <item>Cyber Communication</item>
        <item>Information Security</item>
        <item>Software Architecture and Design</item>
    </string-array>
    <string name="title_activity_questionnaires">QuestionnairesActivity</string>

</resources>

