<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/addProfileMenu"
        android:title="@string/add_your_profile_btn"
        app:showAsAction="never" />

    <item
        android:id="@+id/editProfileMenu"
        android:title="@string/edit_your_profile_btn"
        app:showAsAction="never" />


    <item
        android:id="@+id/chooseProfileMenu"
        android:title="@string/choose_other_profiles_btn"
        app:showAsAction="never" />


    <item
        android:id="@+id/termsMenu"
        android:title="@string/terms_and_conditions"
        app:showAsAction="never" />
    <item
        android:id="@+id/logoutMenu"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>