<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_surveys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingRight="25dp"
    android:paddingLeft="25dp"
    android:paddingBottom="5dp"
    android:background="#45bfa5"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeImg"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rsz_1rsz_3logo1_70"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <TextView
        android:text="@string/surveys_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:paddingBottom="10dp"
        android:textColor="#fafafa"
        android:textStyle="bold|italic">
    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fafafa"/>
    <Button
        android:text="@string/generalSurvey"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/general_survey_btn"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textColor="#fafafa"
        android:background="@drawable/btn_radius">

    </Button>
    <Button
        android:text="@string/pamSurvey"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/pam_survey_btn"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:textColor="#fafafa"
        android:background="@drawable/btn_radius">

    </Button>
    <Button
        android:text="@string/post_lecture"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/post_lecture_btn"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="#fafafa"
        android:background="@drawable/btn_radius">

    </Button>

</LinearLayout>

