<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <!--Title-->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:paddingBottom="130dp"
        android:textColor="#101010"/>

    <!--Course field-->
    <TextView
        android:text="@string/course_hint"
        android:id="@+id/course_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="55dp"
        android:paddingLeft="40dp"
        android:layout_below="@id/login_title">
    </TextView>
    <Spinner
        android:id="@+id/loginCourse_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/course_login"
        android:layout_below="@id/login_title"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:paddingRight="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/course_login">

        <!--Sing in button-->
        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_in_button"
            android:background="@drawable/btn_radius"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="17sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_hint"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" />

</RelativeLayout>