<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingRight="25dp"
    android:paddingLeft="25dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:background="#45bfa5">
    <TextView
        android:id="@+id/add_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_profile"
        android:textSize="35sp"
        android:paddingBottom="30dp"
        android:textColor="#fafafa"
        android:textStyle="bold|italic">
    </TextView>
    <View
        android:id="@+id/separatorFive"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/add_profile_title"
        />
    <TextView
        android:text="@string/age_title"
        android:id="@+id/age_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorFive"
        android:textColor="#fafafa">
    </TextView>
    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/age_title"
        android:layout_below="@id/separatorFive"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp" />
    <View
        android:id="@+id/separatorOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/age_title"/>
    <TextView
        android:text="@string/gender_title"
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorOne"
        android:textColor="#fafafa">
    </TextView>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender_radio_group"
        android:layout_toRightOf="@id/gender_title"
        android:layout_below="@id/separatorOne"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:paddingTop="13dp">
        <RadioButton
            android:text="M"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/m_radio_button"
            android:textColor="#fafafa"
            android:textColorLink="#fafafa"
            tools:textColorLink="#fafafa"
            android:textColorHint="#fafafa"
            android:textColorHighlight="#fafafa">

        </RadioButton>
        <RadioButton
            android:text="F"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/f_radio_button"
            android:layout_marginLeft="10dp"
            android:textColor="#fafafa">

        </RadioButton>
    </RadioGroup>
    <View
        android:id="@+id/separatorTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/gender_title"/>
    <TextView
        android:text="@string/faculty_title"
        android:id="@+id/faculty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorTwo"
        android:textColor="#fafafa">
    </TextView>
    <Spinner
        android:id="@+id/faculty_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/faculty_title"
        android:layout_below="@id/separatorTwo"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"/>
    <View
        android:id="@+id/separatorThree"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/faculty_title"/>
    <TextView
        android:text="@string/studies_level"
        android:id="@+id/studies_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorThree"
        android:textColor="#fafafa">
    </TextView>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studies_radio_group"
        android:layout_below="@id/studies_level"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <RadioButton
            android:text="Bachelor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/bach_radio_button"
            android:layout_marginRight="5dp"
            android:textColor="#fafafa">

        </RadioButton>
        <RadioButton
            android:text="Master"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mast_radio_button"
            android:layout_marginRight="5dp"
            android:textColor="#fafafa">

        </RadioButton>
        <RadioButton
            android:text="PhD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/phd_radio_button"
            android:layout_marginRight="5dp"
            android:textColor="#fafafa">

        </RadioButton>
        <RadioButton
            android:text="Other"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/other_radio_button"
            android:textColor="#fafafa">
        </RadioButton>
    </RadioGroup>
    <View
        android:id="@+id/separatorFour"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/studies_radio_group"/>
    <TextView
        android:text="@string/course_title"
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorFour"
        android:textColor="#fafafa">
    </TextView>
    <Button
        android:id="@+id/courseDialogBtn"
        android:text="@string/courseDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/course_title"
        android:layout_below="@+id/separatorFour"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:textColor="#fafafa"
        android:background="@drawable/btn_radius">
    </Button>>
    <View
        android:id="@+id/separatorSix"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/course_title"
        android:layout_marginTop="7dp"/>
    <TextView
        android:text="@string/username"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/separatorSix"
        android:textColor="#fafafa">
    </TextView>
    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/username"
        android:layout_below="@id/separatorSix"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="#fafafa"
        />
    <View
        android:id="@+id/separatorSeven"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff3366"
        android:layout_below="@id/username"
        android:layout_marginTop="7dp"/>

    <LinearLayout
        android:id="@+id/reg_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/reg_done_btn"
            android:text="@string/reg_done_btn"
            android:layout_height="50dp"
            android:layout_width="130dp"
            android:textSize="25sp"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_radius"
            android:textColor="#fafafa">

        </Button>
    </LinearLayout>


</RelativeLayout>